--- a/web/themes/custom/openig/scss/_services.scss
+++ b/web/themes/custom/openig/scss/_services.scss
@@ -264,10 +264,12 @@
     .picto_titre h2{
         //margin-right: 100px;
         margin-top: -20px;
+        margin-right: 90px;
     } 
 
     .picto_titre img{
-        left: 115px;
+        right: 0;
+        //left: 115px;
         height: fit-content;
     }
 
